[project]
name = "log-streamer"
version = "0.1.0"
description = "Python Log Analytics Platform"
authors = [
    {name = "sfdev33",email = "sf.dev33@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.05"
dependencies = [
    "kafka-python (>=2.1.4,<3.0.0)",
    "elasticsearch (>=8.17.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
